Import of MHAMILTON/roads-v2.1 from CPAN.
gitpan-cpan-distribution: roads
gitpan-cpan-version:      v2.1
gitpan-cpan-path:         MHAMILTON/roads-v2.1.tar.gz
gitpan-cpan-author:       MHAMILTON
gitpan-cpan-maturity:     released

--- a/config.dist/multilingual/UK-English/mktemp/addedok.html
+++ b/config.dist/multilingual/UK-English/mktemp/addedok.html
@@ -4,7 +4,7 @@
 <LINK REL="StyleSheet" HREF="/<HTDOCS>/looknfeel/thatroadslook.css"
   TYPE="text/css">
 </HEAD>
-</BODY>
+<BODY>
 <H1>Template <Handle> created</H1>
 <P>
 The new template of type <templatetype> with a handle of
