--- a/config.dist/multilingual/UK-English/mktemp/offlineeditedok.html
+++ b/config.dist/multilingual/UK-English/mktemp/offlineeditedok.html
@@ -4,7 +4,7 @@
 <LINK REL="StyleSheet" HREF="/<HTDOCS>/looknfeel/thatroadslook.css"
   TYPE="text/css">
 </HEAD>
-</BODY>
+<BODY>
 <H1>Template <Handle> updated</H1>
 <P>
 The template of type <templatetype> with a handle of
@@ -13,9 +13,9 @@ The template of type <templatetype> with a handle of
 
 <P>
 <STRONG>NB</STRONG>: this is an offline change which will not take
-effect until the database is next reindexed.  We recommend that you
-set up a <EM>cron</EM> job to do this automatically at regular
-intervals, e.g. every night.
+effect until the database is next reindexed using the rebuild.pl
+script.  We recommend that you set up a <EM>cron</EM> job to do this
+automatically at regular intervals, e.g. every night.
 </P>
 <HR>
 <P>
