--- a/config.dist/multilingual/UK-English/mktemp/cannotdeindex.html
+++ b/config.dist/multilingual/UK-English/mktemp/cannotdeindex.html
@@ -4,6 +4,7 @@
 <LINK REL="StyleSheet" HREF="/<HTDOCS>/looknfeel/thatroadslook.css"
   TYPE="text/css">
 </HEAD>
+<BODY>
 <H1>Can't deindex old template</H1>
 
 <P>
