--- a/config.dist/multilingual/UK-English/mktemp/cannotreplace.html
+++ b/config.dist/multilingual/UK-English/mktemp/cannotreplace.html
@@ -4,6 +4,7 @@
 <LINK REL="StyleSheet" HREF="/<HTDOCS>/looknfeel/thatroadslook.css"
   TYPE="text/css">
 </HEAD>
+<BODY>
 <H1>Can't replace old template with new one</H1>
 
 <P>
