--- a/config.dist/multilingual/UK-English/mktemp/editedok.html
+++ b/config.dist/multilingual/UK-English/mktemp/editedok.html
@@ -4,7 +4,7 @@
 <LINK REL="StyleSheet" HREF="/<HTDOCS>/looknfeel/thatroadslook.css"
   TYPE="text/css">
 </HEAD>
-</BODY>
+<BODY>
 <H1>Template <Handle> updated</H1>
 <P>
 The template of type <templatetype> with a handle of
