--- a/config.dist/multilingual/UK-English/zero2one/cannotindex.html
+++ b/config.dist/multilingual/UK-English/zero2one/cannotindex.html
@@ -4,6 +4,7 @@
 <LINK REL="StyleSheet" HREF="/<HTDOCS>/looknfeel/thatroadslook.css"
   TYPE="text/css">
 </HEAD>
+<BODY>
 <H1>Couldn't add template to inverted index</H1>
  
 <P>
