Import of MHAMILTON/roads-v2.2 from CPAN.
gitpan-cpan-distribution: roads
gitpan-cpan-version:      v2.2
gitpan-cpan-path:         MHAMILTON/roads-v2.2.tar.gz
gitpan-cpan-author:       MHAMILTON
gitpan-cpan-maturity:     released

--- a/config.dist/multilingual/UK-English/lib/authfail.html
+++ b/config.dist/multilingual/UK-English/lib/authfail.html
@@ -6,7 +6,7 @@
   TYPE="text/css">
 </HEAD>
 <BODY>
-<H1>Authentication Failure</TITLE>
+<H1>Authentication Failure</H1>
 
 <P>
 Sorry, but you are not on the list of users permitted to carry out this
