Import of MHAMILTON/roads-v2.3 from CPAN.
gitpan-cpan-distribution: roads
gitpan-cpan-version:      v2.3
gitpan-cpan-path:         MHAMILTON/roads-v2.3.tar.gz
gitpan-cpan-author:       MHAMILTON
gitpan-cpan-maturity:     released

--- a/config.dist/multilingual/UK-English/admincentre/admincentre.html
+++ b/config.dist/multilingual/UK-English/admincentre/admincentre.html
@@ -39,6 +39,9 @@ online documentation</A> for the ROADS software!</P>
 <INPUT TYPE="hidden" NAME="clusterAuthor" VALUE="1">
 <INPUT TYPE="hidden" NAME="variantsize" VALUE="1">
 <INPUT TYPE="submit" VALUE="Quick DOCUMENT Template Creation">
+<INPUT TYPE="hidden" NAME="clusterAuthor" VALUE="1">
+<INPUT TYPE="hidden" NAME="clusterAdmin" VALUE="1">
+<INPUT TYPE="hidden" NAME="clusterSubject" VALUE="1">
 </FORM>
 
 <FORM ACTION="<MYURL>/<ADMIN-CGI>/mktemp.pl" METHOD="POST">
@@ -54,6 +57,9 @@ online documentation</A> for the ROADS software!</P>
 <INPUT TYPE="hidden" NAME="clusterAuthor" VALUE="1">
 <INPUT TYPE="hidden" NAME="variantsize" VALUE="1">
 <INPUT TYPE="submit" VALUE="Quick SERVICE Template Creation">
+<INPUT TYPE="hidden" NAME="clusterAuthor" VALUE="1">
+<INPUT TYPE="hidden" NAME="clusterAdmin" VALUE="1">
+<INPUT TYPE="hidden" NAME="clusterSubject" VALUE="1">
 </FORM>
 </P>
 <UL>
@@ -116,7 +122,7 @@ online documentation</A> for the ROADS software!</P>
 <A HREF="<MYURL>/<ADMIN-CGI>/register.pl">Register this ROADS server</A><BR>
 <A HREF="mailto:roads-liaison@bristol.ac.uk">Send bug report!</A><BR>
 
-<P><EM>$Id: admincentre.html,v 2.15 1998/08/06 11:28:07 jon Exp $<EM></P>
+<P><EM>$Id: admincentre.html,v 2.16 1999/05/12 15:42:59 jon Exp $<EM></P>
 
 <HR>
 <ADDRESS>Developed by <A HREF="http://hill.lut.ac.uk/People/jon.html">Jon
