--- a/config.dist/multilingual/UK-English/search/search.html
+++ b/config.dist/multilingual/UK-English/search/search.html
@@ -21,7 +21,8 @@ form</A>.<P>
 To search for networked resources, enter one or more terms. You may
 also use the expressions AND, OR and NOT to specify your search more
 precisely.
-
+</p>
+Hint:<em> <SEARCHHINT></em>
 <THISGETFORM>
  <HR>
  <TABLE WIDTH="100%">
